Add endpoint DELETE /categories/:category_code
