# config/routes.rb
@@ -2,6 +2,6 @@
 
 Rails.application.routes.draw do
   api_version(module: 'V1', default: true, header: { name: 'Accept', value: 'application/vnd.ebookstore.v1+json' }) do
-    resources :categories, param: :category_code, only: [:index]
+    resources :categories, param: :category_code, only: [:destroy, :index]
   end
 end
